# vkr

./: .gitignore  .rustfmt.toml  Cargo.toml
.cargo/: config.toml
assets/: cards.aseprite
assets/arena/: summer_arena.aseprite  winter_arena.aseprite
assets/units/archer_tower/: ally_tower.aseprite  enemy_tower.aseprite
assets/units/bat/: bat.aseprite
assets/units/blue/: blue.aseprite
assets/units/bomber/: bomb.aseprite  bomber.aseprite
assets/units/fireball/: fireball.aseprite
assets/units/giant/: giant.aseprite
assets/units/green/: green.aseprite
assets/units/king_tower/: ally_tower.aseprite  enemy_tower.aseprite
assets/units/musketeer/: ally_musketeer.aseprite  bullet.aseprite  enemy_musketeer.aseprite  musketeer.aseprite
assets/units/priest/: ally_priest.aseprite  enemy_priest.aseprite  fireball.aseprite  priest.aseprite
assets/units/red/: red.aseprite
assets/units/rus/: rus.aseprite
assets/units/yellow/: yellow.aseprite
assets/units/zap/: zap.aseprite
boyar_tournament/: Cargo.toml
boyar_tournament/src/: dev_tools.rs  lib.rs  scaling.rs
boyar_tournament/src/screens/: loading.rs  mod.rs  splash.rs  ui.rs
boyar_tournament/src/screens/gameplay/: arena.rs  deck.rs  mod.rs  networking.rs
boyar_tournament/src/screens/gameplay/projectiles/: bomb.rs  bullet.rs  fireball.rs  mod.rs
boyar_tournament/src/screens/gameplay/units/: archer_tower.rs  bat.rs  bomber.rs  giant.rs  king_tower.rs  mod.rs  musketeer.rs  priest.rs  rus.rs
common/: Cargo.toml
common/src/: lib.rs
desktop_client/: Cargo.toml
desktop_client/src/: main.rs
docs/: ReportAntiplagiat.docx  ResultAntiplug.docx  cards.txt  crates.txt  todo.txt  ~$Диплом.docx  ~WRL0083.tmp  Диаграмма компонентов клиента.drawio  Диаграмма компонентов сервера.drawio  Диплом.docx  Задание.docx  Задание.txt  Исходный код.docx  Пример Тёмыча.docx
docs/Clash Royale/: clash_royale_3rd.pcapng
docs/Result/: Диплом.docx  Презентация.pptx  Речь.txt
docs/Rush Royale/: rush_royale_1st.pcapng  rush_royale_2nd.pcapng  rush_royale_3rd.pcapng
mobile_client/: Cargo.toml  release.keystore
mobile_client/src/: lib.rs
server/: Cargo.toml
server/src/: ai.rs  main.rs  networking.rs
server/src/projectiles/: bomb.rs  bullet.rs  fireball.rs  mod.rs
server/src/units/: archer_tower.rs  bat.rs  bomber.rs  giant.rs  king_tower.rs  mod.rs  musketeer.rs  priest.rs  rus.rs
