[workspace]
members = ["boyar_tournament", "common", "desktop_client", "mobile_client", "server"]
resolver = "2"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
