[package]
name = "desktop_client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
boyar_tournament = { path = "../boyar_tournament" }
bevy = { version = "0.15", default-features = false }
image = { version = "0.25.5", default-features = false }
winit = { version = "0.30.5", default-features = false }

[lints]
workspace = true
